--- a/internal/projects/bulleit/Interfaces/StampDetailViewController.xib
+++ b/internal/projects/bulleit/Interfaces/StampDetailViewController.xib
@@ -533,6 +533,7 @@
 						<string key="NSFrame">{{223, 399}, {50, 16}}</string>
 						<reference key="NSSuperview" ref="880728759"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:311</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -724,6 +725,14 @@
 						<reference key="destination" ref="358418181"/>
 					</object>
 					<int key="connectionID">67</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">eDetailArrowImageView</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="387020970"/>
+					</object>
+					<int key="connectionID">74</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -1087,7 +1096,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">73</int>
+			<int key="maxID">74</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1146,6 +1155,7 @@
 							<string>commenterNameLabel</string>
 							<string>commentsView</string>
 							<string>currentUserImageView</string>
+							<string>eDetailArrowImageView</string>
 							<string>headerView</string>
 							<string>loadingView</string>
 							<string>mainCommentContainer</string>
@@ -1162,6 +1172,7 @@
 							<string>UILabel</string>
 							<string>UIView</string>
 							<string>UserImageView</string>
+							<string>UIImageView</string>
 							<string>UIView</string>
 							<string>UIActivityIndicatorView</string>
 							<string>UIView</string>
@@ -1181,6 +1192,7 @@
 							<string>commenterNameLabel</string>
 							<string>commentsView</string>
 							<string>currentUserImageView</string>
+							<string>eDetailArrowImageView</string>
 							<string>headerView</string>
 							<string>loadingView</string>
 							<string>mainCommentContainer</string>
@@ -1220,6 +1232,10 @@
 							<object class="IBToOneOutletInfo">
 								<string key="name">currentUserImageView</string>
 								<string key="candidateClassName">UserImageView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">eDetailArrowImageView</string>
+								<string key="candidateClassName">UIImageView</string>
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">headerView</string>
